
<LinearLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    xmlns:tools="http://schemas.android.com/tools"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
	        android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
			<TextView
			     android:id="@+id/tv_score"
			     android:layout_width="0dp"
			     android:layout_weight="2"
			     android:layout_height="wrap_content"
			     android:text="Score: 222€"
			     
			     android:textAppearance="?android:attr/textAppearanceSmall" />
			 <!-- From http://stackoverflow.com/questions/5050498/separator-between-buttons-in-custom-button-bar -->
	        <View android:layout_height="fill_parent"
			     
			     android:layout_marginRight="3dp"
			   android:layout_width="2dp"
			   android:background="#90909090"/>
			<TextView
			    android:id="@+id/tv_curveremaining"
			     android:layout_width="0dp"
			    android:layout_weight="2"
			    android:layout_height="wrap_content"
			    android:text="10 curves remaining"
			     
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			 <!-- From http://stackoverflow.com/questions/5050498/separator-between-buttons-in-custom-button-bar -->
	        <View android:layout_height="fill_parent"
			     
			     android:layout_marginRight="3dp"
			   android:layout_width="2dp"
			   android:background="#90909090"/>
			 <TextView
			    android:id="@+id/tv_level"
			     android:layout_width="0dp"
			    android:layout_weight="2"
			    android:layout_height="wrap_content"
			    android:text="Level 32"
			     
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			  <!-- From http://stackoverflow.com/questions/5050498/separator-between-buttons-in-custom-button-bar -->
	        <View android:layout_height="fill_parent"
			     
			     android:layout_marginRight="3dp"
			   android:layout_width="2dp"
			   android:background="#90909090"/>
			 
			<TextView
	            android:id="@+id/confidence_loss"
			     android:layout_width="0dp"
	           	android:layout_weight="1"
	            android:layout_height="wrap_content"
			     
	            android:text="-250" />
			  <TextView
			     android:id="@+id/confidence_gain"
			     android:layout_width="0dp"
			     android:layout_weight="1"
			     android:layout_height="wrap_content"
			     android:text="1800" />
    </LinearLayout>
    
    <ProgressBar
           android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
           android:layout_width="fill_parent"
           android:layout_height="15dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
	    
	     <LinearLayout
	        android:id="@+id/layout_buttons"
	        android:layout_alignParentBottom="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
	
	        <ImageButton
	            android:id="@+id/button_zoomin"
	            android:src="@drawable/button_zoomin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:description="@string/gamemode_againstclock_button_zoomin" />
	        
	        <ImageButton
	            android:id="@+id/button_zoomout"
	            android:src="@drawable/button_zoomout"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:description="@string/gamemode_againstclock_button_zoomout" />
	        
	
	        <ImageButton
	            android:id="@+id/button_skip"
	            android:src="@drawable/button_skip_red"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:description="@string/gamemode_againstclock_button_skip" />
	        
	        
	        <ImageButton
	            android:id="@+id/button_reset"
	            android:src="@drawable/button_reset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:description="@string/gamemode_againstclock_button_reset" />
	        
	        <ImageButton
	            android:id="@+id/button_valid"
	            android:src="@drawable/button_valid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="fitCenter"
	            android:description="@string/prediction_button_valid" />
	        
	         <SeekBar
	             android:id="@+id/seekbar_confidence"
	             android:layout_width="0dp"
	             android:layout_height="fill_parent"
	             android:layout_weight="1" />
	
	     </LinearLayout>
	     
	     <be.tfe.android.curveviewer.CurveView
	         android:id="@+id/curveView"
	         android:layout_width="fill_parent"
	         android:layout_height="fill_parent"
	         android:layout_above="@+id/layout_buttons"
	         android:layout_alignParentLeft="true"
	         android:layout_alignParentTop="true" />

	</RelativeLayout>
</LinearLayout>